--- a/modules/com/app/views/com/config_classes/show.html.erb
+++ b/modules/com/app/views/com/config_classes/show.html.erb
@@ -69,7 +69,7 @@
                        { :key => "input_value", :label => t(:label_com_config_attribute_input_value),:orderable=> true },
                        { :key => "name", :label => t(:label_com_config_attribute_name),:searchable=>true,:orderable=> true},
                        { :key => "description", :label => t(:label_com_config_attribute_description),:orderable=> true,:width=>"250px" }
-                      ],{:paginator_box=>"config_attributesPaginatorBox",:select_type=> 'multi', :search_box=>"config_attributesSearchBox",:force_html=>true})%>
+                      ],{:paginator_box=>"config_attributesPaginatorBox",:select=>"multiple", :search_box=>"config_attributesSearchBox",:force_html=>true})%>
         <div id="config_attributesPaginatorBox"></div>
       </div>
     </div>
@@ -106,3 +106,10 @@
 </div>
 <!-- 配置项关系类型列表结束 -->
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@config_class} %>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+      var target = $("#config_attributes").data("datatable").target;
+      target.data.options.selectHand = "config_relation_types";
+  });
+</script>
