--- a/app/views/irm/external_systems/show.html.erb
+++ b/app/views/irm/external_systems/show.html.erb
@@ -74,13 +74,12 @@
         <%= error_for @external_system_person %>
         <div id="selectablePeople" class="datatable" style="width:100%">
         </div>
-        <%= datatable("selectablePeople",{:controller=>"irm/external_system_members", :action=>"get_available_people_data",
-                                                 :external_system_id => @external_system.id,:format=>"json"},
+        <%= datatable("selectablePeople",{:controller=>"irm/external_system_members", :action=>"get_available_people_data", :external_system_id => @external_system.id,:format=>"json"},
                       [{:key=>"id",:label=>t(:operation), :hidden => true},
                            { :key => "full_name", :label => t(:label_irm_person_full_name),:searchable=>true },
                            { :key => "email_address", :label => t(:label_irm_person_email_address),:searchable=>true },
                            { :key => "organization_name", :label => t(:label_irm_organization),:searchable=>true }],
-                      {:paginator_box=>"selectablePeoplePaginator",:search_box=>"selectablePeopleSearchBox",:select=>"multiple"})%>
+                      {:paginator_box=>"selectablePeoplePaginator",:search_box=>"selectablePeopleSearchBox",:select=>"multiple",:force_html=>true})%>
         <div id="selectablePeoplePaginator"></div>
       </div>
     </div>
@@ -112,51 +111,26 @@
               <div id="id" style="display:none">
               </div>
             </div>
-            <%= datatable("external_people",{:controller => "irm/external_system_members",:action=>"get_owned_members_data",
-                                                    :format=>"json", :external_system_id => @external_system.id},
+            <%= datatable("external_people",{:controller => "irm/external_system_members",:action=>"get_owned_members_data",:format=>"json", :external_system_id => @external_system.id},
                           [{:key=>"id",:label=>t(:operation),:hidden => true},
                            { :key => "full_name", :label => t(:label_irm_person_full_name),:searchable=>true },
                            { :key => "email_address", :label => t(:label_irm_person_email_address),:searchable=>true },
                            { :key => "organization_name", :label => t(:label_irm_organization),:searchable=>true }
-                           ],{:row_perpage=>10,:search_box=>"external_peopleSearchBox",:paginator_box=>"external_peoplePaginatorBox",:select=>"multiple"})%>
+                           ],{:row_perpage=>10,:search_box=>"external_peopleSearchBox",:paginator_box=>"external_peoplePaginatorBox",:select=>"multiple",:force_html=>true})%>
             <div id="external_peoplePaginatorBox"></div>
         </div>
     </div>
 </div>
 
 <script type="text/javascript">
-  Ext.onReady(function(){
-
-     $("#externalSystemId").change(function(e){
-         var url = decodeURIComponent($(e.target).attr("href"));
-         var externalSystemId = $(e.target).val();
-         url = url.replace("{external_system_id}",externalSystemId);
-         window.location = url;
-     });
-
-      var addMember = function(selModel,selected){
-          var ids = [];
-          for(var i = 0;i<selected.length;i++){
-            ids.push(selected[i].data.id);
-          }
-          $("#irm_external_system_person_status_code").val(ids.join(","));
-      }
-      Ext.getCmp("selectablePeopleDatatable").selModel.addListener("selectionchange",addMember);
-
-      var removeMember = function(selModel,selected){
-          var ids = [];
-          for(var i = 0;i<selected.length;i++){
-            ids.push(selected[i].data.id);
-          }
-          $("#irm_external_system_person_temp_id_string").val(ids.join(","));
-      }
-
-      Ext.getCmp("external_peopleDatatable").selModel.addListener("selectionchange",removeMember);
-
-  });
+    $("#externalSystemId").change(function(e){
+        var url = decodeURIComponent($(e.target).attr("href"));
+        var externalSystemId = $(e.target).val();
+        url = url.replace("{external_system_id}",externalSystemId);
+        window.location = url;
+    });
   function display_select_people(){
       $("#select_people").removeClass("unreal-hidden");
-      Ext.getCmp("selectablePeopleDatatable").setWidth(Ext.get("selectablePeople").getComputedWidth());
       $("#member_grid").addClass("unreal-hidden");
       $("#irm_external_system_person_temp_id_string").val("");
   }
@@ -166,4 +140,14 @@
       $("#member_grid").removeClass("unreal-hidden");
       $("#irm_external_system_person_status_code").val("");
   }
+
+  $(document).ready(function(){
+      $("#external_people").bind('selectionchange',function(event,ids){
+         $("#irm_external_system_person_temp_id_string").val(ids.join(","));
+      });
+
+      $("#selectablePeople").bind('selectionchange',function(event,ids){
+        $("#irm_external_system_person_status_code").val(ids.join(","));
+      });
+  });
 </script>
