--- a/app/views/irm/setting/_level_two.html.erb
+++ b/app/views/irm/setting/_level_two.html.erb
@@ -16,29 +16,21 @@
 
   </div>
 </div>
-<div class="listRelatedObject setupBlock">
-    <div class="bTask">
-        <div class="page-block">
-          <div class="pbHeader">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"><h2 class="mainTitle"><%=@menu_entry[:name]%></h2></td>
-                  <td id="topButtonRow" class="pbButton">
-                  </td>
-                  <td class="pbHelp">
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-              <div class="pbBody">
-                <table cellspacing="0" cellpadding="0" border="0" width="100%" class="setupOverview">
-                  <tbody>
-                  <%= generate_entries_table(@menu_entry.id) %>
-                  </tbody>
-                </table>
-             </div>
-        </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=@menu_entry[:name]%></h2>
+    </td>
+
+  </tr></table>
+  <div class="page-block-body">
+    <div class="content">
+    <table class="form-table setting-menu" style="width: 100%;">
+      <tbody>
+        <%= generate_entries_table(@menu_entry.id) %>
+      </tbody>
+    </table>
     </div>
+  </div>
 </div>
