--- a/app/views/icm/incident_requests/edit_assign_me.html.erb
+++ b/app/views/icm/incident_requests/edit_assign_me.html.erb
@@ -17,7 +17,6 @@
         </table>
       </div>
       <div class="pbBody">
-        <div id="incidentRequestsPaginatorBox"></div>
         <div id="incident_requests" class="datatable" style="width:100%">
           <div id="title" style="display:none">
             <%= link_to( "({incident_status_id_label}){title}",{:controller=>"icm/incident_journals",:action=>"new",:request_id=>"{id}"}) %>
@@ -32,8 +31,8 @@
                                { :key => "incident_status_id_label",:hidden=>true },
                                { :key => "requested_by_label", :label => t(:label_icm_incident_request_requested_by,:searchable=>true) },
                                { :key => "external_system_id_label", :label => t(:label_irm_external_system,:searchable=>true) }
-                               ],{:select=>"multiple",:paginator_box=>'incidentRequestsPaginatorBox'})%>
-
+                               ],{:select=>"multiple",:paginator_box=>'incidentRequestsPaginatorBox',:force_html=>true})%>
+        <div id="incidentRequestsPaginatorBox"></div>
         <div class="pbSubsection">
           <%= form_tag({:action=>"update_assign_me"}) do |f|%>
           <%= hidden_field_tag(:incident_request_ids,:id=>"incident_request_ids")  %>
@@ -56,28 +55,17 @@
       </div>
     </div>
 </div>
-
-
 <script type="text/javascript">
-  Ext.onReady(function(){
-      var processSelected = function(selModel,selected){
-          var ids = [];
-          for(var i = 0;i<selected.length;i++){
-            ids.push(selected[i].data.id);
-          }
-          $("#incident_request_ids").val(ids.join(","));
-          if(selected.length>0)
-              Ext.get("formSubmit").dom.removeAttribute("disabled");
-          else
+    $(document).ready(function(){
+        $("#incident_requests").bind('selectionchange',function(event,ids){
+            $("#incident_request_ids").val(ids.join(","));
+            if(ids.length>0)
+                $("#formSubmit").removeAttr("disabled");
+            else
               $("#formSubmit").attr("disabled",true);
-      }
-      Ext.getCmp("incident_requestsDatatable").selModel.addListener("selectionchange",processSelected);
-  });
+        });
+    });
 </script>
-
-
-
-
 <% content_for :sidebar do%>
     <%= render :partial =>"/icm/incident_requests/short_cut_new" %>
 <% end %>
