--- a/app/views/skm/channels/new_groups.html.erb
+++ b/app/views/skm/channels/new_groups.html.erb
@@ -35,20 +35,15 @@
                    {:key=>"name",:label=>t(:label_irm_group_name), :width => "150px"},
                    {:key=>"description",:label=>t(:label_irm_group_description)},
                    {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}],
-                   {:paginator_box=>"groupsPaginator",:select=>"multiple"})%>
+                   {:paginator_box=>"groupsPaginator",:select=>"multiple",:force_html=>true})%>
         <div id="groupsPaginator"></div>
       </div>
     </div>
 </div>
 <script type="text/javascript">
-  Ext.onReady(function(){
-      var setSelectedValue = function(selModel,selected){
-          var ids = [];
-          for(var i = 0;i<selected.length;i++){
-            ids.push(selected[i].data.id);
-          }
-          $("#skm_channel_group_status_code").val(ids.join(","));
-      };
-      Ext.getCmp("avaGroupsListDatatable").selModel.addListener("selectionchange",setSelectedValue);
-});
+    $(document).ready(function(){
+        $("#avaGroupsList").bind('selectionchange',function(event,ids){
+            $("#skm_channel_group_status_code").val(ids.join(","));
+        });
+    });
 </script>
