--- a/app/views/irm/reports/index.html.erb
+++ b/app/views/irm/reports/index.html.erb
@@ -48,11 +48,9 @@
             <tr>
               <td>
                 <%= render :partial =>"/irm/common/tree_sidebar_template", :locals =>{:tree_url => url_for(:controller => "irm/reports", :action=>"get_reports_tree", :format=>:json),
-                                                                             :target_table => "report_list",
                                                                              :tree_id => "tree-div",
                                                                              :root_text => t(:label_irm_report_folder_all),
-                                                                             :url_param_value => 'id',
-                                                                             :url_param_name => 'folder_id'} %>
+                                                                             :li_attr => 'id'} %>
               </td>
               <td>
                   <div id="report_list" class="datatable" style="width:100%;">
@@ -93,7 +91,16 @@
   </div>
 
 <script type="text/javascript">
-  $(function(){
+    $(document).ready(function(){
+          $("#tree-div").bind('nodeListener',function(event, element){
+              var params = {};
+              params['folder_id'] = element.attr('id');
+              var current_target = $("#report_list").data("datatable").target;
+              current_target.data.options.searchOptions = params;
+              current_target.loadPage(1);
+          });
+    });
+    $(function(){
       if($("#folderEditLink")){
           $("#folderEditLink").click(function(e){
               var folderId =  $('#folderId').val();
@@ -102,12 +109,10 @@
                   url = jQuery.tmpl(url,{folderId:folderId}).text();
                   $("#folderEditLink").attr("href",url);
               }
-              else
-              {
+              else{
                   return false;
               }
-      });
-    }
-  });
-
+          });
+      }
+    });
 </script>
