--- a/app/views/irm/common/_tree_sidebar_template.html.erb
+++ b/app/views/irm/common/_tree_sidebar_template.html.erb
@@ -1,24 +1,28 @@
 <% require_javascript([:treeview,:treeview_async]) %>
 <% require_css(:treeview) %>
-<div id="tree-div" href="<%= tree_url %>">
+<% require_css(:treeview_ie6) if ie6? %>
+<% tree_id ||= "tree-div" %>
+<%  root_text ||= nil %>
+<%  li_attrs ||= 'id' %>
+<%  checkbox ||=  false %>
+<div id="<%= tree_id%>" href="<%= tree_url %>">
   <script type="text/javascript">
     $(document).ready(function(){
         //初始化树
-        var div = $("#tree-div"),
+        var div = $("#<%= tree_id%>"),
         root = $('<ul/>').attr("class", "filetree").appendTo(div);
         var url = div.attr("href");
         //url 中附带上_dom_id参数
         if (url.indexOf('?') > 0) {
-            url +='&_dom_id=tree-div';
+            url +='&_dom_id=<%= tree_id%>';
         }else{
-            url += '?_dom_id=tree-div';
+            url += '?_dom_id=<%= tree_id%>';
         }
         root.treeview({
             url: url,
             root_text: '<%= root_text %>',
-            target_table: '<%= target_table %>',
-            param_name: '<%= url_param_name %>',
-            param_value: '<%= url_param_value %>'
+            li_attrs: '<%=li_attrs %>',
+            show_checkbox: eval('<%= checkbox %>')
         });
     });
   </script>
