--- a/app/views/skm/channels/edit.html.erb
+++ b/app/views/skm/channels/edit.html.erb
@@ -79,7 +79,10 @@
                 <tr>
                   <td class="labelCol"></td>
                   <td class="data2Col">
-                    <div id="tree-div" href="<%= url_for(:controller => "skm/columns", :action=>"get_columns_data",:format=>:json) %>"></div>
+                    <%= render :partial =>"/irm/common/tree_sidebar_template", :locals =>{:tree_url => url_for(:controller => "skm/columns", :action=>"get_columns_data", :format=>:json,:with_check=> @channel.column_ids),
+                                                                                         :tree_id => "tree-div",
+                                                                                         :checkbox => true,
+                                                                                         :li_attrs => "id" } %>
                   </td>
                 </tr>
             </tbody>
@@ -101,45 +104,16 @@
   </div>
 </div>
 <% end %>
-
-<script>
-Ext.onReady(function() {
-    var treeNode = Ext.getDom("tree-div");
-
-    Ext.define('ColumnField', {
-        extend: 'Ext.data.Model',
-        fields: [
-            {name: 'id',type: 'string'},
-            {name: 'text',type: 'string'},
-            {name: 'sc_id',type: 'string'},
-            {name: 'column_name',type: 'string'},
-            {name: 'column_description',type: 'string'},
-            {name: 'column_accesses', type:'string'},
-            {name: 'sc_code',type: 'string'}
-        ]
-    });
-    var store = Ext.create('Ext.data.TreeStore', {
-        model: "ColumnField",
-        proxy: {type: 'ajax',url:  treeNode.getAttribute("href") + "?with_check=<%= @channel.column_ids%>"}
-    });
-
-    var tree = Ext.create('Ext.tree.Panel', {
-        store: store,
-        rootVisible: false,
-        useArrows: true,
-        renderTo: 'tree-div',
-        width: 200,
-        height: 250,
-        listeners:{
-            'itemclick':function(view, record, item, index, e){
-                var column_ids = [];
-                Ext.Array.each(tree.getChecked(), function(rec){
-                    column_ids.push(rec.get('id'));
-                });
-                Ext.getDom("skm_channel_column_ids").setAttribute("value", column_ids);
-            }
-        }
-    });
-
-});
+<script type="text/javascript">
+  $(document).ready(function(){
+      $("#tree-div").bind('nodeListener',function(event, element){
+          var column_ids = [];
+         $(this).find("input[name=ids]").each(function(){
+             if($(this).is(':checked')){
+                 column_ids.push($(this).val());
+             }
+         });
+         $("#skm_channel_column_ids").val(column_ids);
+      });
+  });
 </script>
