--- a/app/views/skm/entry_headers/_data_grid.html.erb
+++ b/app/views/skm/entry_headers/_data_grid.html.erb
@@ -28,8 +28,7 @@
                                                              :target_table => "entry_headers_list",
                                                              :tree_id => "tree-div",
                                                              :root_text => t(:label_skm_column_all),
-                                                             :url_param_value => 'id',
-                                                             :url_param_name => 'column_id'} %>
+                                                             :li_attrs => "id" } %>
             </td>
             <td>
                 <div id="entry_headers_list" class="datatable" style="width:100%">
@@ -69,3 +68,14 @@
       </div>
     </div>
 </div>
+<script type="text/javascript">
+  $(document).ready(function(){
+      $("#tree-div").bind('nodeListener',function(event, element){
+          var params = {};
+          params['column_id'] = element.attr('id');
+          var current_target = $("#entry_headers_list").data("datatable").target;
+          current_target.data.options.searchOptions = params;
+          current_target.loadPage(1);
+      });
+  });
+</script>
