--- a/public/themes/default/stylesheets/treeview.css
+++ b/public/themes/default/stylesheets/treeview.css
@@ -56,7 +56,6 @@
 .treeview .actions .add-child a {font-weight: bold;color: #666;}
 
 #tree-div {
-    min-width: 200px;
     width: 200px;
     height: 300px;
     background:white;
@@ -79,8 +78,14 @@
 }
 .filetree { margin: 0 !important;}
 .filetree .active {font-weight: bold;}
-.filetree span.folder, .filetree span.file { padding: 1px 0 1px 18px; display: block; font-size: 11px; }
+.filetree span.folder, .filetree span.file { padding: 1px 0 1px 18px; display: inline; font-size: 11px; }
 .filetree span.folder { background: url(../images/treeview/folder.gif) 0 0 no-repeat; }
 .filetree li.expandable span.folder { background: url(../images/treeview/folder-closed.gif) 0 0 no-repeat; }
-.filetree a,.filetree a:hover,.filetree a:link,.filetree a:visited { text-decoration: none !important;}
+.filetree a,.filetree a:hover,.filetree a:link,.filetree a:visited {display: block; text-decoration: none !important;}
 .filetree span.file { background: url(../images/treeview/file.gif) 0 0 no-repeat; }
+.filetree span.file input[type="checkbox"]{
+    float: left;
+    vertical-align: middle;
+    padding: 0;
+    margin: 1px 0 0 0 !important;
+}
