为bootstrap版本表格添加添加功能： 1、配置排序列 2、配置select => single or multiple 3、选择每页显示记录数

--- a/app/views/irm/menus/index.html.erb
+++ b/app/views/irm/menus/index.html.erb
@@ -21,7 +21,7 @@
                    {:key=>"name",:label=>t(:label_irm_menu_name),:searchable=>true},
                    {:key=>"description",:label=>t(:label_irm_menu_description)},
                    {:key=>"status_code",:label=>t(:active)}],
-                   {:search_box=>"menusSearchBox",:paginator_box=>"menusPaginatorBox"}) %>
+                   {:search_box=>"menusSearchBox",:paginator_box=>"menusPaginatorBox",:select => 'multiple'}) %>
 
     </div>
     <div id="menusPaginatorBox"></div>
