修正全局设置与快速编码页面

--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -820,16 +820,9 @@ body .nav-tab-bar .nav-tab {
     padding-bottom: 10px;
 }
 
-
-.sub-page-block-header{
-    color: #000000;
-    background-color: #CFEEF8;
-    padding: 4px 16px;
-    overflow: auto;
-}
 .sub-page-block .sub-page-block-header{
     color: #000000;
-    background-color: #8E9DBE;
+    background-color: #CFEEF8;
     padding: 4px 16px;
     overflow: auto;
 }
@@ -915,6 +908,11 @@ body .nav-tab-bar .nav-tab {
     width: 30%;
     padding: 5px 12px 5px 12px;
     text-align: right;
+}
+
+.show-block .sub-page-block-header{
+    background-color: transparent;
+    border-top: 2px solid #8E9DBE;
 }
 
 //==========datatable
