--- a/app/views/irm/lookup_types/_new_form.html.erb
+++ b/app/views/irm/lookup_types/_new_form.html.erb
@@ -1,76 +1,78 @@
 <%= setting_title %>
+<%= form_for(@lookup_type,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
 
-<%= form_for(@lookup_type,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+
+  <% content_for :form_block_a   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_lookup_type_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_lookup_types)%></label></td>
+            <td class="data-col"><%=f.text_field :lookup_type,:required=>true,:irm_uppercase=>true %></td>
+            <td class="label-col"><%=f.radio_button :lookup_level,Irm::Constant::GLOBAL_LOOKUP_LEVEL,:disabled=>"disabled"%>
+                             	      </td>
+            <td class="data-col"><label><%=t(:label_global_level)%></label></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_meaning)%></label></td>
+            <td class="data-col"><%=f.text_field :meaning,:required=>true%></td>
+            <td class="label-col"><%=f.radio_button :lookup_level,Irm::Constant::EXTENDED_LOOKUP_LEVEL,:disabled=>"disabled"%>
+                                    </td>
+            <td class="data-col"><label><%=t(:label_extended_level)%></label></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_lookup_type_description)%></label></td>
+            <td class="data-col"><%=f.text_area :description,:rows=>4%></td>
+            <td class="label-col"><%=f.radio_button :lookup_level,Irm::Constant::USER_LOOKUP_LEVEL,:checked => true%>
+                                    </td>
+            <td class="data-col"><label><%=t(:label_user_level)%></label></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @lookup_type%>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-          <span class="requiredLegend">
-            <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-            </span>
-          <span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-          </span>
-      </span>
-      <h3><%=t(:label_irm_lookup_type_info)%></h3>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class=>"btn cancel"}%>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_irm_menu_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @lookup_type%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_irm_lookup_type_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
+          </div>
+        </div>
+
+      </div>
+
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
     </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_lookup_types)%></label></td>
-              <td class="dataCol"><%=f.text_field :lookup_type,:required=>true,:irm_uppercase=>true %></td>
-              <td class="labelCol"><label><%=f.radio_button :lookup_level,Irm::Constant::GLOBAL_LOOKUP_LEVEL,:disabled=>"disabled"%>
-                               	      <%=t(:label_global_level)%></label></td>
-              <td class="dataCol"></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_meaning)%></label></td>
-              <td class="dataCol"><%=f.text_field :meaning,:required=>true%></td>
-              <td class="labelCol"><label><%=f.radio_button :lookup_level,Irm::Constant::EXTENDED_LOOKUP_LEVEL,:disabled=>"disabled"%>
-                                      <%=t(:label_extended_level)%></label></td>
-              <td class="dataCol"></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_lookup_type_description)%></label></td>
-              <td class="dataCol"><%=f.text_area :description,:rows=>4%></td>
-              <td class="labelCol"><label><%=f.radio_button :lookup_level,Irm::Constant::USER_LOOKUP_LEVEL,:checked => true%>
-                                      <%=t(:label_user_level)%></label></td>
-              <td class="dataCol"></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+
 <% end %>
+
+
 
 
