--- a/app/views/irm/lookup_types/index.html.erb
+++ b/app/views/irm/lookup_types/index.html.erb
@@ -1,37 +1,27 @@
 <%= setting_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_lookup_type_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="permissionsSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="lookup_type" class="datatable" style="width:100%;">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;
-            <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-        </div>
-        <%= datatable("lookup_type",{:controller=>"irm/lookup_types",:action=>"get_lookup_types",:format=>"json"},
-                  [{:key=>"id",:label=>t(:edit),:formatter=>"Y.irm.template",:width=>"70px"},
-                   {:key=>"lookup_level",:label=>t(:label_lookup_level),:width=>"80px"},
-                   {:key=>"lookup_type",:label=>t(:label_lookup_types_code),:searchable=>true,:width=>"250px"},
-                   {:key=>"meaning",:label=>t(:label_meaning),:searchable=>true,:width=>"180px"},
-                   {:key=>"description",:label=>t(:label_description)},
-                   {:key=>"status_meaning",:label=>t(:label_status_code),:width=>"65px"}],
-                   {:search_box=>"permissionsSearchBox",:paginator_box=>"lookupTypePaginator"})%>
-        <div id="lookupTypePaginator"></div>
-      </div>
-    </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_lookup_type_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+    </td>
+    <td class="page-block-helper">
+      <div id="searchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="lookup_type"></div>
+      <%= datatable("lookup_type",{:controller=>"irm/lookup_types",:action=>"get_lookup_types",:format=>"json"},
+                [{:key=>"id",:label=>t(:edit),:formatter=>"Y.irm.template",:width=>"70px"},
+                 {:key=>"lookup_level",:label=>t(:label_lookup_level),:width=>"80px"},
+                 {:key=>"lookup_type",:label=>t(:label_lookup_types_code),:searchable=>true,:width=>"250px"},
+                 {:key=>"meaning",:label=>t(:label_meaning),:searchable=>true,:width=>"180px"},
+                 {:key=>"description",:label=>t(:label_description)},
+                 {:key=>"status_meaning",:label=>t(:label_status_code),:width=>"65px"}],
+                 {:search_box=>"searchBox",:paginator_box=>"paginator"})%>
+      <div id="paginator"></div>
+  </div>
 </div>
