--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1499,7 +1499,9 @@ ul.mini-tab-lists li.current-tab a{
     }
 }
 
-//=====show block=====================
+
+//=====setting page =====================
 @import "framework/setting";
+@import "plugins/mask";
 
 
