--- a/app/views/irm/group_members/get_data_from_person.html.erb
+++ b/app/views/irm/group_members/get_data_from_person.html.erb
@@ -1,45 +1,7 @@
-<!--  irm datatable      -->
- <div class="irm-datatable">
-   <div>
-       <table count="<%=@count%>">
-         <thead>
-           <tr>
-             <th style="width:60px;">
-               <div><%= t(:operation) %></div>
-             </th>
-             <th style="width:300px;">
-               <div><%= t(:label_irm_group_name) %></div>
-             </th>
-             <th>
-               <div><%= t(:label_irm_group_description) %></div>
-             </th>
-           </tr>
-         </thead>
-         <tbody>
-         <% @datas.each do |data| %>
-         <tr id="<%=data[:id]%>">
-           <td>
-             <div>
-               <%= link_to t(:remove), {:controller=>"irm/group_members",:action=>"delete_from_person",:id=>data[:id],
-                                      :person_id=>@person.id},:confirm => t(:label_are_you_sure) ,
-                                      :method => :delete %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= data[:name] %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%=data[:description]%>
-             </div>
-           </td>
-
-         </tr>
-         <% end -%>
-         </tbody>
-       </table>
-   </div>
- </div>
-<!--  end irm datatable      -->
+<%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
+  <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
+    <%= link_to t(:remove), {:controller=>"irm/group_members",:action=>"delete_from_person",:id=>data[:id], :person_id=>@person.id},:confirm => t(:label_are_you_sure),:method => :delete %>
+  <% end %>
+  <% builder.column(:name,{:title=>t(:label_irm_group_name)})%>
+  <% builder.column(:description,{:title=>t(:label_irm_group_description)})%>
+<% end %>
