--- a/app/views/irm/my_login_history/get_login_data.html.erb
+++ b/app/views/irm/my_login_history/get_login_data.html.erb
@@ -1,58 +1,7 @@
-<!--  irm datatable      -->
- <div class="irm-datatable">
-   <div>
-       <table count="<%=@count%>">
-         <thead>
-           <tr>
-             <th style="width:110px;">
-               <div><%= t(:label_irm_login_record_user_ip) %></div>
-             </th>
-             <th style="width:160px;">
-               <div><%= t(:label_irm_login_record_operate_system) %></div>
-             </th>
-             <th  style="width:160px;">
-               <div><%= t(:label_irm_login_record_browser) %></div>
-             </th>
-             <th style="width:180px;">
-               <div><%= t(:label_irm_login_record_login_at) %></div>
-             </th>
-             <th style="width:180px;">
-               <div><%= t(:label_irm_login_record_logout_at) %></div>
-             </th>
-           </tr>
-         </thead>
-         <tbody>
-         <% @datas.each do |data| %>
-         <tr id="<%=data[:id]%>">
-           <td>
-             <div>
-               <%= data[:user_ip] %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= data[:operate_system] %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= data[:browser] %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= format_date(data[:login_at]) %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= format_date(data[:logout_at]) %>
-             </div>
-           </td>
-         </tr>
-         <% end -%>
-         </tbody>
-       </table>
-   </div>
- </div>
-<!--  end irm datatable      -->
+<%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
+  <% builder.column(:user_ip,{:title=>t(:label_irm_login_record_user_ip), :width => "15%"})%>
+  <% builder.column(:operate_system,{:title=>t(:label_irm_login_record_operate_system), :width => "15%"})%>
+  <% builder.column(:browser,{:title=>t(:label_irm_login_record_browser)})%>
+  <% builder.column(:login_at,{:title=>t(:label_irm_login_record_login_at)})%>
+  <% builder.column(:logout_at,{:title=>t(:label_irm_login_record_logout_at)})%>
+<% end %>
