--- a/app/views/irm/people/_new_form.html.erb
+++ b/app/views/irm/people/_new_form.html.erb
@@ -1,201 +1,176 @@
 <%= common_title() %>
-<%= form_for(@person,:url=>{:action=>"create"},:as=>"irm_person",:builder => LabellingFormBuilder) do |f| %>
-<div  class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
+
+<%= form_for(@person,:url=>{:action=>"create"},:as=>"irm_person",:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_person   do%>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><label><%=t(:label_irm_identity_login_name)%></label></td>
+            <td class="data-col"><%= f.text_field(:login_name,:required=>true) %></td>
+            <td class="label-col"><label><%=(t :label_irm_person_role)%></label></td>
+            <td class="data-col"><%=f.blank_select :role_id,available_roles,{},{:id=>"role_id"}%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_person_email_address)%></label></td>
+            <td class="data-col"><%=f.text_field :email_address, :required=>true%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_profile)%></label></td>
+            <td class="data-col"><%= f.blank_select(:profile_id,available_profile,{},{:required=>true,:id=>"profile_id"})%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_person_last_name)%></label></td>
+            <td class="data-col"><%=f.text_field :last_name%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_organization)%></label></td>
+            <td class="data-col"><%= f.blank_select(:organization_id,available_organization,{},{:required=>true,}) %></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_person_first_name)%></label></td>
+            <td class="data-col"><%=f.text_field :first_name, :required=>true%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
+            <td class="data-col"><%=f.text_field :bussiness_phone,{:required=>true, :irm_number_and_cross => true}%></td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><%= t(:label_irm_identity_language_code) %></td>
+            <td class="data-col"><%= f.select(:language_code, selectable_languages) %></td>
+            <td class="label-col"><label><%=t(:label_irm_person_fax_number)%></label></td>
+            <td class="data-col"><%=f.text_field :fax_number, {:irm_number_and_cross => true}%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:label_irm_person_notification_lang)%></label></td>
+            <td class="data-col"><%=f.select :notification_lang,selectable_languages%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
+            <td class="data-col"><%=f.text_field :mobile_phone, {:irm_number_only => true}%></td>
+          </tr>
+          <tr>
+             <td class="label-col"><label><%=t(:label_irm_person_notification_flag)%></label></td>
+             <td class="data-col"><%=f.check_box :notification_flag,:checked => true%></td>
+             <td class="label-col"><label><%=t(:label_irm_person_home_phone)%></label></td>
+             <td class="data-col"><%=f.text_field :home_phone, {:irm_number_and_cross => true}%></td>
+          </tr>
+          <tr>
+             <td class="label-col"><label><%=t(:label_irm_person_vip_flag)%></label></td>
+             <td class="data-col"><%=f.check_box :vip_flag%></td>
+            <td class="label-col"><label><%=t(:label_irm_person_home_address)%></label></td>
+            <td class="data-col"><%=f.text_field :home_address%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
+            <td class="data-col"><%=f.check_box :assignment_availability_flag%></td>
+            <td class="label-col empty"></td>
+            <td class="data-col empty"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><%= t(:label_irm_person_template_flag) %></td>
+            <td class="data-col"><%= f.check_box(:template_flag) %></td>
+            <td class="label-col empty"></td>
+            <td class="data-col empty"></td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+  <% content_for :form_block_password do%>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><label><%= t(:label_irm_identity_password)%></label></td>
+            <td class="data-col"><%=f.password_field(:password, :size=>40,:required=>true,:autocomplete=>"off")%></td>
+            <td class="label-col empty"></td>
+            <td class="data-col empty"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%= t(:label_irm_identity_password_confirmation)%></label></td>
+            <td class="data-col"><%=f.password_field(:password_confirmation, :size=>40,:required=>true,:autocomplete=>"off")%></td>
+            <td class="label-col empty"></td>
+            <td class="data-col empty"></td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+  <% content_for :form_block_approve do%>
+    <table class="form-table">
+      <tbody>
+        <tr>
+         <td class="label-col"><label><%=t(:label_irm_person_delegate_approver)%></label></td>
+         <td class="data-col"><%=f.blank_select(:delegate_approver,available_person)%></td>
+         <td class="labelCol"><label><%=t(:label_irm_person_approve_request_mail)%></label></td>
+         <td class="data-col"><%=f.check_box :approve_request_mail,:checked => true%></td>
+       </tr>
+       <tr>
+         <td class="label-col"><label><%=t(:label_irm_person_delegate_manager)%></label></td>
+         <td class="data-col"><%=f.blank_select(:manager,available_person)%></td>
+         <td class="label-col empty"></td>
+         <td class="data-col empty"></td>
+       </tr>
+      </tbody>
+    </table>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_to t(:next), {}, {:href => "javascript:void(0);", :class => "btn btn-primary"} %>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:step_n, :n => "1") %><%= t(:label_irm_person_new) %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons   %>
+          </td>
+          <td class="page-block-helper">
             <%= t(:step_n_total_m, :n => "1", :m => "3") %>
+          </td>
+        </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 个人信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_irm_person_info)%></h3>
         </div>
-        <h2>
-            <%= t(:step_n, :n => "1") %><%= t(:label_irm_person_new) %>
-        </h2>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_person   %>
+        </div>
+
+        <!-- 设置密码 -->
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%=t(:label_irm_person_password_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_password   %>
+        </div>
+
+        <!-- 审批信息 -->
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%=t(:label_irm_person_approve_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_approve   %>
+        </div>
+
+      </div>
     </div>
 
-    <div class="pbBody">
-        <%= error_for @person%>
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td class="pbButton">
-                    <div class="button"><%= link_to t(:next), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %></div>
-                    <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-        <div class="pbWizardBody">
-            <div class="secondary-palette">
-              <div class="pbBody">
-                <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-                  <span class="pbSubExtra">
-                      <span class="requiredLegend">
-                        <span class="requiredExampleOuter">
-                        <span class="requiredExample">&nbsp;</span>
-                        </span>
-                      <span class="requiredMark">*</span>
-                      <span class="requiredText"> = <%=t(:label_is_required)%></span>
-                      </span>
-                  </span>
-                  <h3><%=t(:label_irm_person_info)%></h3>
-                </div>
-                <div class="pbSubsection">
-                  <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                    <tbody>
-                        <tr>
-                          <td class="labelCol"><label><%=t(:label_irm_identity_login_name)%></label></td>
-                          <td class="dataCol"><%= f.text_field(:login_name,:required=>true) %></td>
-                          <td class="labelCol"><label><%=(t :label_irm_person_role)%></label></td>
-                          <td class="dataCol"><%=f.blank_select :role_id,available_roles,{},{:id=>"role_id"}%></td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label><%=(t :label_irm_person_email_address)%></label></td>
-                          <td class="dataCol"><%=f.text_field :email_address, :required=>true%></td>
-                          <td class="labelCol"><label><%=t(:label_irm_person_profile)%></label></td>
-                          <td class="dataCol"><%= f.blank_select(:profile_id,available_profile,{},{:required=>true,:id=>"profile_id"})%></td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label><%=(t :label_irm_person_last_name)%></label></td>
-                          <td class="dataCol"><%=f.text_field :last_name%></td>
-                          <td class="labelCol"><label><%=t(:label_irm_person_organization)%></label></td>
-                          <td class="dataCol"><%= f.blank_select(:organization_id,available_organization,{},{:required=>true,}) %></td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label><%=(t :label_irm_person_first_name)%></label></td>
-                          <td class="dataCol"><%=f.text_field :first_name, :required=>true%></td>
-                          <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
-                          <td class="dataCol">
-                            <%=f.text_field :bussiness_phone,{:required=>true, :irm_number_and_cross => true}%>
-                          </td>
-                        </tr>
+    <table class="page-block-footer">
+      <tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr>
+  </table>
+  </div>
 
-                        <tr>
-                          <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
-                          <td class="dataCol"><%= f.select(:language_code, selectable_languages) %></td>
-                           <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
-                           <td class="dataCol">
-                               <%=f.text_field :fax_number, {:irm_number_and_cross => true}%>
-                           </td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label><%=t(:label_irm_person_notification_lang)%></label></td>
-                          <td class="dataCol"><%=f.select :notification_lang,selectable_languages%></td>
-                          <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
-                           <td class="dataCol">
-                             <%=f.text_field :mobile_phone, {:irm_number_only => true}%>
-                           </td>
-                        </tr>
-                        <tr>
-                           <td class="labelCol">
-                             <label><%=t(:label_irm_person_notification_flag)%></label>
-                           </td>
-                           <td class="dataCol"><%=f.check_box :notification_flag,:checked => true%></td>
-
-                          <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
-                          <td class="dataCol">
-                            <%=f.text_field :home_phone, {:irm_number_and_cross => true}%>
-                          </td>
-                        </tr>
-                        <tr>
-                           <td class="labelCol"><label><%=t(:label_irm_person_vip_flag)%></label></td>
-                           <td class="dataCol"><%=f.check_box :vip_flag%></td>
-                          <td class="labelCol"><label><%=t(:label_irm_person_home_address)%></label></td>
-                          <td class="dataCol">
-                             <%=f.text_field :home_address%>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
-                          <td class="dataCol"><%=f.check_box :assignment_availability_flag%></td>
-                          <td class="labelCol"></td>
-                          <td class="dataCol"></td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><%= t(:label_irm_person_template_flag) %></td>
-                          <td class="dataCol"><%= f.check_box(:template_flag) %></td>
-                          <td class="labelCol"></td>
-                          <td class="dataCol"></td>
-                        </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-              <div class="pbBody">
-                <div id="head_2_ep" class="pbSubheader first tertiaryPalette">
-                  <h3><%=t(:label_irm_person_password_info)%></h3>
-                </div>
-                <div class="pbSubsection">
-                  <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                    <tbody>
-                        <tr>
-                          <td class="labelCol"><label><%= t(:label_irm_identity_password)%></label></td>
-                          <td class="dataCol"><%=f.password_field(:password, :size=>40,:required=>true,:autocomplete=>"off")%></td>
-                          <td class="labelCol"></td>
-                          <td class="dataCol"></td>
-
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label><%= t(:label_irm_identity_password_confirmation)%></label></td>
-                          <td class="dataCol"><%=f.password_field(:password_confirmation, :size=>40,:required=>true,:autocomplete=>"off")%></td>
-                          <td class="labelCol"></td>
-                          <td class="dataCol"></td>
-                        </tr>
-
-                    </tbody>
-                  </table>
-                </div>
-                <div id="head_3_ep" class="pbSubheader first tertiaryPalette">
-                  <h3><%=t(:label_irm_person_approve_info)%></h3>
-                </div>
-                <div class="pbSubsection">
-                  <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                    <tbody>
-                         <tr>
-                           <td class="labelCol"><label><%=t(:label_irm_person_delegate_approver)%></label></td>
-                           <td class="dataCol"><%=f.blank_select(:delegate_approver,available_person)%></td>
-                           <td class="labelCol">
-                             <label><%=t(:label_irm_person_approve_request_mail)%></label>
-                           </td>
-                           <td class="dataCol"><%=f.check_box :approve_request_mail,:checked => true%></td>
-                         </tr>
-
-                         <tr>
-                           <td class="labelCol"><label><%=t(:label_irm_person_delegate_manager)%></label></td>
-                           <td class="dataCol"><%=f.blank_select(:manager,available_person)%></td>
-                         </tr>
-                    </tbody>
-                  </table>
-                </div>
-
-              </div>
-              <div class="pbBottomButtons">
-                <table cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td class="pbTitle"></td>
-                      <td id="bottomButtonRow" class="pbButtonb">
-                        <div class="button"><%= link_to t(:next), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %></div>
-                        <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-        </div>
-    </div>
-</div>
 <% end %>
+
 <script type="text/javascript">
   $(function(){
-    $(".add_system_button").click(function(){
+    $(".btn-primary").click(function(){
         $("#irm_person_new").attr('action', '<%= url_for(:action => "create", :controller => "irm/people", :next_action => "add_system")%>');
-        $("#irm_person_new").submit();
-    });
-
-    $(".add_group_button").click(function(){
-        $("#irm_person_new").attr('action', '<%= url_for(:action => "create", :controller => "irm/people", :next_action => "add_group")%>');
         $("#irm_person_new").submit();
     });
   })
