--- a/app/views/irm/people/index.html.erb
+++ b/app/views/irm/people/index.html.erb
@@ -1,38 +1,30 @@
 <%= common_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_person_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="permissionsSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="person" class="datatable" style="width:100%;">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;
-            <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-        </div>        
-        <%= datatable("person",{:action=>"get_data",:format=>"json"},
-                  [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                   {:key=>"login_name",:label=>t(:label_irm_person_login),:searchable=>true,:width=>"80px"},
-                   {:key=>"person_name",:label=>t(:label_irm_person_name),:searchable=>true,:width=>"120px"},
-                   {:key=>"email_address",:label=>t(:label_irm_person_email_address),:searchable=>true},
-                   {:key=>"bussiness_phone",:label=>t(:label_irm_person_bussiness_phone),:searchable=>true},
-                   {:key=>"organization_name",:label=>t(:label_irm_person_organization),:searchable=>true},
-                   {:key=>"profile_name",:label=>t(:label_irm_person_profile),:searchable=>true}],
-                   {:search_box=>"permissionsSearchBox",:paginator_box=>"peoplePaginatorBox"})%>
-        <div id="peoplePaginatorBox"></div>
-      </div>
+
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_person_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+    </td>
+    <td class="page-block-helper">
+      <div id="permissionsSearchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="person">
+      <%= datatable("person",{:action=>"get_data",:format=>"json"},
+                        [{:key=>"id",:label=>t(:operation)},
+                         {:key=>"login_name",:label=>t(:label_irm_person_login),:searchable=>true},
+                         {:key=>"person_name",:label=>t(:label_irm_person_name),:searchable=>true},
+                         {:key=>"email_address",:label=>t(:label_irm_person_email_address),:searchable=>true},
+                         {:key=>"bussiness_phone",:label=>t(:label_irm_person_bussiness_phone),:searchable=>true},
+                         {:key=>"organization_name",:label=>t(:label_irm_person_organization),:searchable=>true},
+                         {:key=>"profile_name",:label=>t(:label_irm_person_profile),:searchable=>true}],
+                         {:search_box=>"permissionsSearchBox",:paginator_box=>"peoplePaginatorBox"})%>
     </div>
+    <div id="peoplePaginatorBox"></div>
+  </div>
 </div>
