--- a/app/views/irm/people/reset_password.html.erb
+++ b/app/views/irm/people/reset_password.html.erb
@@ -1,39 +1,30 @@
 <%= common_title(:action_meaning=>t(:label_irm_person_reset_password),:show_data=>@person.full_name) %>
 
-<div class="listRelatedObject setupBlock">
-    <div class="bPageBlock">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
+<!-- 页面结构 -->
+<div class="show-block">
+  <table class="page-block-header">
+    <tr>
+        <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_irm_person_reset_password_success) %></h2>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+      <table class="show-table">
+        <tbody>
             <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_person_reset_password_success) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-              </td>
-              <td class="pbHelp">
-              </td>
+              <td class="label-col"><label><%=t(:label_irm_identity_login_name)%></label></td>
+              <td class="data-col"><%= @person.login_name%></td>
+              <td class="label-col empty"><div></div></td>
+              <td class="data-col empty"><div></div></td>
             </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div class="pbSubsection">
-          <table style="width:100%;" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-                <tr>
-                  <td class="labelCol"><label><%=t(:label_irm_identity_login_name)%></label></td>
-                  <td class="dataCol"><%= @person.login_name%></td>
-                  <td class="labelCol empty"><div></div></td>
-                  <td class="dataCol  empty"><div></div></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_irm_person_email_address)%></label></td>
-                  <td class="dataCol"><%=@person.email_address%></td>
-                  <td class="labelCol empty"><div></div></td>
-                  <td class="dataCol  empty"><div></div></td>
-                </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
+            <tr>
+              <td class="label-col"><label><%=t(:label_irm_person_email_address)%></label></td>
+              <td class="data-col"><%=@person.email_address%></td>
+              <td class="label-col empty"><div></div></td>
+              <td class="data-col empty"><div></div></td>
+            </tr>
+        </tbody>
+      </table>
+  </div>
 </div>
