--- a/app/views/irm/lookup_types/get_lookup_types.html.erb
+++ b/app/views/irm/lookup_types/get_lookup_types.html.erb
@@ -4,8 +4,8 @@
     <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
   <% end %>
   <% builder.column(:lookup_level,{:title=>t(:label_lookup_level), :width => "20%"})%>
-  <% builder.column(:lookup_type,{:title=>t(:label_lookup_types_code), :width => "25%"})%>
-  <% builder.column(:meaning,{:title=>t(:label_meaning)})%>
+  <% builder.column(:lookup_type,{:title=>t(:label_lookup_types_code), :width => "25%",:searchable=>true,:sortable=>true})%>
+  <% builder.column(:meaning,{:title=>t(:label_meaning),:searchable=>true,:sortable=>true})%>
   <% builder.column(:description,{:title=>t(:label_description)})%>
   <% builder.column(:status_meaning,{:title=>t(:label_status_code)})%>
 <% end %>
