--- a/app/views/irm/lookup_types/show.html.erb
+++ b/app/views/irm/lookup_types/show.html.erb
@@ -1,86 +1,68 @@
 <%= setting_show_title(:show_data => @lookup_type.lookup_type) %>
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+
+
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=t(:label_irm_menu)%></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @lookup_type},:class=>"btn"%>
+      <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_lookup_type_show) %>&nbsp;<%= t(:label_detail_info) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @lookup_type}%></div>
-            <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_lookup_types)%></label></td>
+            <td class="data-col"><%=@lookup_type.lookup_type%></td>
+            <td class="label-col"><%=radio_button_tag :lookup_level,Irm::Constant::GLOBAL_LOOKUP_LEVEL,Irm::Constant::GLOBAL_LOOKUP_LEVEL.eql?(@lookup_type.lookup_level),{:disabled=>true}%>
+                             	      </td>
+            <td class="data-col"><%=t(:label_global_level)%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_meaning)%></label></td>
+            <td class="data-col"><%=@lookup_type[:meaning]%></td>
+            <td class="label-col"><%=radio_button_tag :lookup_level,Irm::Constant::EXTENDED_LOOKUP_LEVEL,Irm::Constant::EXTENDED_LOOKUP_LEVEL.eql?(@lookup_type.lookup_level),{:disabled=>true}%>
+                                    </td>
+            <td class="data-col"><%=t(:label_extended_level)%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_lookup_type_description)%></label></td>
+            <td class="data-col"><%=@lookup_type[:description]%></td>
+            <td class="label-col"><%=radio_button_tag :lookup_level,Irm::Constant::USER_LOOKUP_LEVEL,Irm::Constant::USER_LOOKUP_LEVEL.eql?(@lookup_type.lookup_level),{:disabled=>true}%>
+                                    </td>
+            <td class="data-col"><%=t(:label_user_level)%></td>
+          </tr>
       </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-            <td class="labelCol"><label><%=(t :label_lookup_types)%></label></td>
-              <td class="dataCol"><%=@lookup_type.lookup_type%></td>
-              <td class="labelCol"><label><%=radio_button_tag :lookup_level,@lookup_type.lookup_level,{:disabled=>true}%>
-                               	      <%=t(:label_global_level)%></label></td>
-              <td class="dataCol"></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_meaning)%></label></td>
-              <td class="dataCol"><%=@lookup_type[:meaning]%></td>
-              <td class="labelCol"><label><%=radio_button_tag :lookup_level,@lookup_type.lookup_level,{:disabled=>true}%>
-                                      <%=t(:label_extended_level)%></label></td>
-              <td class="dataCol"></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_lookup_type_description)%></label></td>
-              <td class="dataCol"><%=@lookup_type[:description]%></td>
-              <td class="labelCol"><label><%=radio_button_tag :lookup_level,@lookup_type.lookup_level,:checked => true%>
-                                      <%=t(:label_user_level)%></label></td>
-              <td class="dataCol"></td>
-            </tr>
-        </tbody>
-      </table>
+</div>
+
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_menu_entry_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:add), {:controller=>"irm/lookup_values",:action => "new",:lookup_type=>@lookup_type.lookup_type,:_from=>"lookup_type"},:class=>"btn"%>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="lookup_type" class="datatable" style="width:100%">
     </div>
+    <%= datatable("lookup_type",{:controller=>"irm/lookup_values",:action=>"get_lookup_values", :lookup_type=>@lookup_type.lookup_type},
+                  [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template"},
+                   {:key=>"lookup_code",:label=>(t :label_irm_lookup_value_lookup_code),:searchable=>true},
+                   {:key=>"meaning",:label=>t(:label_irm_lookup_value_meaning),:searchable=>true},
+                   {:key=>"description",:label=>t(:label_irm_lookup_type_description),:searchable=>true},
+                   {:key=>"start_date_active",:label=>t(:label_start_date_active)},
+                   {:key=>"end_date_active",:label=>t(:label_end_date_active)},
+                   {:key=>"status_meaning",:label=>t(:label_status_code)}],
+                   {:search_box=>"searchBox"}) %>
   </div>
 </div>
-
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_lookup_value_list) %></h2></td>
-              <td class="pbButton">
-                <div class="button"><%= link_to t(:add), {:controller=>"irm/lookup_values",:action => "new",:lookup_type=>@lookup_type.lookup_type,:_from=>"lookup_type"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="permissionsSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="lookup_type" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:controller=>"irm/lookup_values",:action=>"edit",:id=>"{id}",:_from=>"lookup_type"}) %>&nbsp;
-            <%= link_to(t(:show),{:controller=>"irm/lookup_values",:action=>"show",:id=>"{id}",:_from=>"lookup_type"}) %>
-          </div>
-        </div>
-        <%= datatable("lookup_type",{:controller=>"irm/lookup_values",:action=>"get_lookup_values", :lookup_type=>@lookup_type.lookup_type},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template"},
-                       {:key=>"lookup_code",:label=>(t :label_irm_lookup_value_lookup_code),:searchable=>true},
-                       {:key=>"meaning",:label=>t(:label_irm_lookup_value_meaning),:searchable=>true},
-                       {:key=>"description",:label=>t(:label_irm_lookup_type_description),:searchable=>true},
-                       {:key=>"start_date_active",:label=>t(:label_start_date_active)},
-                       {:key=>"end_date_active",:label=>t(:label_end_date_active)},
-                       {:key=>"status_meaning",:label=>t(:label_status_code)}],
-                       {:search_box=>"permissionsSearchBox"}) %>
-      </div>
-    </div>
-</div>
-
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@lookup_type} %>
-
