--- a/app/views/irm/people/_new_form.html.erb
+++ b/app/views/irm/people/_new_form.html.erb
@@ -156,13 +156,12 @@
 
     <table class="page-block-footer">
       <tr>
-      <td class="page-block-title">
-      </td>
-      <td class="page-block-button">
-        <%= content_for :form_buttons   %>
-      </td>
-    </tr>
-  </table>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
   </div>
 
 <% end %>
