--- a/app/views/irm/people/get_data.html.erb
+++ b/app/views/irm/people/get_data.html.erb
@@ -3,10 +3,10 @@
     <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]}) %>&nbsp;
     <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
   <% end %>
-  <% builder.column(:login_name,{:title=>t(:label_irm_person_login), :width => "15%"})%>
-  <% builder.column(:person_name,{:title=>t(:label_irm_person_name), :width => "15%"})%>
-  <% builder.column(:email_address,{:title=>t(:label_irm_person_email_address)})%>
-  <% builder.column(:bussiness_phone,{:title=>t(:label_irm_person_bussiness_phone)})%>
-  <% builder.column(:organization_name,{:title=>t(:label_irm_person_organization)})%>
+  <% builder.column(:login_name,{:title=>t(:label_irm_person_login),:searchable=>true, :width => "15%"})%>
+  <% builder.column(:person_name,{:title=>t(:label_irm_person_name),:searchable=>true, :width => "15%"})%>
+  <% builder.column(:email_address,{:title=>t(:label_irm_person_email_address),:searchable=>true})%>
+  <% builder.column(:bussiness_phone,{:title=>t(:label_irm_person_bussiness_phone),:searchable=>true})%>
+  <% builder.column(:organization_name,{:title=>t(:label_irm_person_organization),:searchable=>true})%>
   <% builder.column(:profile_name,{:title=>t(:label_irm_person_profile)})%>
 <% end %>
