--- a/app/views/irm/external_system_members/get_available_external_system_data.html.erb
+++ b/app/views/irm/external_system_members/get_available_external_system_data.html.erb
@@ -1,38 +1,6 @@
-<!--  irm datatable      -->
- <div class="irm-datatable">
-   <div>
-       <table count="<%=@count%>" id="externalSystemList">
-         <thead>
-           <tr>
-             <th key = "external_system_code">
-               <div><%= t(:label_irm_external_system) %></div>
-             </th>
-             <th key="system_name">
-               <div><%= t(:name) %></div>
-             </th>
-             <th key="system_description">
-                <div><%= t(:description) %></div>
-             </th>
-           </tr>
-         </thead>
-         <tbody>
-         <% @datas.each do |data| %>
-         <tr id="<%=data.id %>">
-           <td>
-             <div><%= data[:external_system_code] %></div>
-           </td>
-
-           <td>
-             <div><%= data[:system_name] %></div>
-           </td>
-
-           <td>
-             <div><%= data[:system_description] %></div>
-           </td>
-         </tr>
-         <% end -%>
-         </tbody>
-       </table>
-   </div>
- </div>
-<!--  end irm datatable      -->
+<%=datatable_view({:columns=>[:external_system_code,:system_name,:system_description],:count=>@count,:datas=>@datas}) do |builder|%>
+  <% builder.column(:id)%>
+  <% builder.column(:external_system_code,{:title=>t(:label_irm_external_system), :width => "20%"})%>
+  <% builder.column(:system_name,{:title=>t(:label_irm_menu_name), :width => "25%"})%>
+  <% builder.column(:system_description,{:title=>t(:description)})%>
+<% end %>
