--- a/app/views/irm/group_members/new_from_person.html.erb
+++ b/app/views/irm/group_members/new_from_person.html.erb
@@ -1,94 +1,66 @@
 <%= common_title(:model_meaning => @person[:full_name], :action_meaning=>t(:label_irm_group_member_select_group)) %>
-<%= form_for(@group_member,:url=>{:action=>"create_from_person"},:builder => LabellingFormBuilder) do |f| %>
-<%= f.hidden_field(:status_code) %>
-<% if @step %>
-<div class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
-            <%= t(:step_n_total_m, :n => "3", :m => "3") %>
-        </div>
-        <h2>
-            <%= t(:step_n, :n => "3") %><%= t(:label_irm_group_member_select_group) %>
-        </h2>
-    </div>
-    <div class="pbBody">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td class="pbButton">
-                      <div class="button"><%= link_to t(:last), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %></div>
-                      <div class="button"><%= f.submit t(:save)%></div>
-                      <div class="button"><%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id})%></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-        <div class="pbWizardBody">
-            <div class="secondary-palette">
-<% else %>
-<div class="listRelatedObject setupBlock">
+
+<%= form_for(@group_member,:url=>{:action=>"create_from_person"},:builder => CustomFormBuilder) do |f| %>
+    <%= f.hidden_field(:status_code) %>
+    <!--页面结构-->
     <div class="page-block">
-      <div class="pbHeader">
-
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_select_result) %>&nbsp;<%= t(:label_detail_info) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                  <div class="button"><%= f.submit t(:save)%></div>
-                  <div class="button"><%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id})%></div>
+      <table class="page-block-header">
+        <tr>
+          <% if @step %>
+           <td class="page-block-title">
+             <h2 class="block-title"><%= t(:step_n, :n => "3") %><%= t(:label_irm_group_member_select_group) %></h2>
+           </td>
+           <td class="page-block-button">
+             <%= link_to t(:last), {}, {:href => "javascript:void(0);", :class => "btn add_system_button"} %>
+             <%= link_submit t(:save),{:class=>"btn"}%>
+             <%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id},:class => "btn" )%>
+           </td>
+           <td class="page-block-helper">
+             <%= t(:step_n_total_m, :n => "3", :m => "3") %>
+           </td>
+          <% else %>
+              <td class="page-block-title">
+                <h2 class="block-title"><%= t(:label_irm_select_result) %>&nbsp;<%= t(:label_detail_info) %></h2>
               </td>
-              <td class="pbHelp">
-                <div id="selectableSystemSearchBox"></div>
+              <td class="page-block-button">
+                <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+                <%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id},:class=>"btn cancel")%>
               </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
-<% end %>
-      <div class="pbBody">
-        <%= error_for @group_member %>
-        <div id="supportGroupMembers" class="datatable" style="width:100%">
+              <td class="page-block-helper">
+                <div id="selectablePersonSearchBox"></div>
+              </td>
+          <% end %>
+        </tr>
+      </table>
+      <div class="page-block-body">
+        <div id="supportGroupMembers">
+          <%= datatable("supportGroupMembers",{:action=>"get_groupable_data",:id=>@person.id,:format=>:json},
+                            [{:key=>"id",:hidden=>true},
+                             {:key=>"name",:label=>t(:label_irm_group_name),:searchable=>true},
+                             {:key=>"code",:label=>t(:label_irm_group_group_code),:searchable=>true},
+                             {:key=>"description",:label=>t(:label_irm_group_description),:searchable=>true}
+                             ],
+                             {:paginator_box=>"personPaginator",:search_box=>"selectablePersonSearchBox",:select=>"multiple"})%>
         </div>
-        <%= datatable("supportGroupMembers",{:action=>"get_groupable_data",:id=>@person.id,:format=>:json},
-                  [{:key=>"id",:hidden=>true},
-                   {:key=>"name",:label=>t(:label_irm_group_name),:searchable=>true},
-                   {:key=>"code",:label=>t(:label_irm_group_group_code),:searchable=>true},
-                   {:key=>"description",:label=>t(:label_irm_group_description),:searchable=>true}
-                   ],
-                   {:paginator_box=>"personPaginator",:search_box=>"selectablePersonSearchBox",:select=>"multiple",:force_html=>true})%>
         <div id="personPaginator"></div>
       </div>
-      <div class="pbBottomButtons">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"></td>
-              <td id="bottomButtonRow" class="pbButtonb">
-                <% if @step %>
-                  <div class="button"><%= link_to t(:last), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %></div>
-                  <div class="button"><%= f.submit t(:save)%></div>
-                  <div class="button"><%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id})%></div>
-                <% else %>
-                  <div class="button"><%= f.submit t(:save)%></div>
-                  <div class="button"><%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id})%></div>
-                <% end %>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-<% if @step %>
-
-            </div>
-        </div>
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title"></td>
+          <td class="page-block-button">
+            <% if @step %>
+              <%= link_to t(:last), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %>
+              <%= link_submit t(:save),{:class=>"btn"}%>
+              <%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id},:class => "btn" )%>
+            <% else %>
+              <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+              <%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id},:class=>"btn cancel")%>
+            <% end %>
+          </td>
+        </tr>
+      </table>
     </div>
-</div>
-
+<% end %>
 <script type="text/javascript">
   $(function(){
     $(".add_system_button").click(function(){
@@ -96,14 +68,6 @@
         $("#new_irm_group_member").submit();
     });
   })
-</script>
-<% else %>
-
-    </div>
-</div>
-<% end %>
-<% end %>
-<script type="text/javascript">
   $(document).ready(function(){
       $("#supportGroupMembers").bind('selectionchange',function(event,ids){
           $("#irm_group_member_status_code").val(ids.join(","));
