--- a/app/views/irm/profiles/_common_info.html.erb
+++ b/app/views/irm/profiles/_common_info.html.erb
@@ -1,28 +1,29 @@
-<div class="pbBody">
-    <div class="pbSubheader tertiaryPalette">
-      <h3><%= t(:label_common_info) %><span class="titleSeparatingColon">:</span></h3>
-    </div>
-
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+<div class="page-block">
+    <table class="page-block-header">
+      <tr>
+         <td class="page-block-title"><h2 class="block-title"><%= t(:label_common_info) %>:</h2></td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <table class="show-table">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_profile_code)%></label></td>
-              <td class="dataCol"><%= profile.code%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
+              <td class="label-col"><label><%=(t :label_irm_profile_code)%></label></td>
+              <td class="data-col"><%= profile.code%></td>
+              <td class="label-col empty">&nbsp;</td>
+              <td class="data-col empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :name)%></label></td>
-              <td class="dataCol"><%= profile[:name]%></td>
-              <td class="labelCol"><label><%=(t :label_irm_profile_user_license)%></label></td>
-              <td class="dataCol"><%= profile[:user_license_name]%></td>
+              <td class="label-col"><label><%=(t :name)%></label></td>
+              <td class="data-col"><%= profile[:name]%></td>
+              <td class="label-col"><label><%=(t :label_irm_profile_user_license)%></label></td>
+              <td class="data-col"><%= profile[:user_license_name]%></td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :description)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%;"><%= profile[:description]%></td>
+              <td class="label-col"><label><%=(t :description)%></label></td>
+              <td class="data-col" colspan="3" style="width:82%;"><%= profile[:description]%></td>
             </tr>
         </tbody>
       </table>
     </div>
-  </div>
+</div>
