--- a/app/views/irm/profiles/show.html.erb
+++ b/app/views/irm/profiles/show.html.erb
@@ -1,22 +1,22 @@
 <%= common_title %>
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_profile) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @profile}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+
+<div class="show-block">
+  <!-- 人员信息 -->
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_irm_profile) %></h2>
+      </td>
+      <td class="page-block-button">
+          <%= link_to t(:edit), {:action => "edit", :id =>@profile},:class=>"btn btn-primary" %>
+          <%= link_to t(:back), {:action => "index"},:class=>"btn"%>
+      </td>
+    </tr>
+  </table>
   <%= render :partial => "common_info", :locals => {:profile => @profile}%>
   <%= render :partial => "kanban_info", :locals => {:profile => @profile}%>
   <%= render :partial => "function_list", :locals => {:profile => @profile}%>
-
 </div>
+
 
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@profile} %>
