添加页面日历控件

--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1507,5 +1507,6 @@ ul.mini-tab-lists li.current-tab a{
 //=====setting page =====================
 @import "framework/setting";
 @import "plugins/mask";
+@import "framework/datepicker";
 
 
