--- a/app/views/icm/support_groups/_new_form.html.erb
+++ b/app/views/icm/support_groups/_new_form.html.erb
@@ -1,100 +1,92 @@
-<%= form_for(@support_group,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-    <%= f.hidden_field(:group_id) %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@support_group,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+  <%= f.hidden_field(:group_id) %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_icm_support_group_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="labelCol"><label><%=(t :label_icm_support_group_code)%></label></td>
+            <td class="dataCol"><%=@group.code%></td>
+            <td class="labelCol"><label><%=(t :label_icm_support_group_oncall_flag)%></label></td>
+            <td class="dataCol"><%=f.check_box :oncall_flag%></td>
+          </tr>
+          <tr>
+            <td class="labelCol"><label><%=(t :label_icm_support_group_name)%></label></td>
+            <td class="dataCol"><%=@group[:name]%></td>
+            <td class="labelCol"><label><%=(t :label_icm_support_group_vendor_flag)%></label></td>
+            <td class="dataCol"><%=f.check_box :vendor_flag%></td>
+          </tr>
+          <tr>
+            <td class="labelCol"><label><%=t(:label_icm_support_group_assignment_process_code)%></label></td>
+            <td class="dataCol"><%=f.select :assignment_process_code,available_processes,{},{:required=>true}%></td>
+            <td class="labelCol"></td>
+            <td class="dataCol"></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @support_group%>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-          <span class="requiredLegend">
-            <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-            </span>
-          <span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-          </span>
-      </span>
-      <h3><%=t(:label_common_info)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_icm_support_group_code)%></label></td>
-              <td class="dataCol"><%=@group.code%></td>
-              <td class="labelCol"><label><%=(t :label_icm_support_group_oncall_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box :oncall_flag%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_icm_support_group_name)%></label></td>
-              <td class="dataCol"><%=@group[:name]%></td>
-              <td class="labelCol"><label><%=(t :label_icm_support_group_vendor_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box :vendor_flag%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:label_icm_support_group_assignment_process_code)%></label></td>
-              <td class="dataCol"><%=f.select :assignment_process_code,available_processes,{},{:required=>true}%></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-
-  <div class="pbBody">
-    <div class="pbSubheader first tertiaryPalette">
-      <h3><%= t(:label_icm_group_assignment_detail) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"></td>
-              <td class="dataCol" style="width:82%">
-                <%= render :partial => "irm/duel_select/tmpl",:locals => {:label=>"",:f=>f,:types=>support_group_duel_types,:sources=>support_group_duel_values,:str_value_field=>:assignment_str,:str_value=>@support_group.get_assignment_str,:size=>10} %>
-              </td>
-
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
+  <% end %>
+  <% content_for :form_block_group   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="labelCol empty">&nbsp;</td>
+            <td class="dataCol empty">&nbsp;</td>
+            <td class="labelCol empty">&nbsp;</td>
+            <td class="dataCol empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="labelCol"></td>
+            <td class="dataCol" style="width:82%">
+              <%= render :partial => "irm/duel_select/tmpl",:locals => {:label=>"",:f=>f,:types=>support_group_duel_types,:sources=>support_group_duel_values,:str_value_field=>:assignment_str,:str_value=>@support_group.get_assignment_str,:size=>10} %>
+            </td>
+          </tr>
       </tbody>
     </table>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_icm_support_group_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+        <!-- 支持组信息 -->
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%= t(:label_icm_group_assignment_detail) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_group  %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
   </div>
-</div>
 <% end %>
 
 
