--- a/app/views/icm/support_groups/_no_group_notice.html.erb
+++ b/app/views/icm/support_groups/_no_group_notice.html.erb
@@ -1,27 +1,22 @@
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:notice) %></h2>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:notice) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-          </td>
-        </tr>
+          <tr>
+            <td class="labelCol"><%= t(:label_icm_support_group_add_group_notice) %></td>
+            <td class="dataCol"></td>
+            <td class="labelCol"></td>
+            <td class="dataCol"></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><%= t(:label_icm_support_group_add_group_notice) %></td>
-              <td class="dataCol"></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
 </div>
