--- a/app/views/icm/support_groups/_support_group_index.html.erb
+++ b/app/views/icm/support_groups/_support_group_index.html.erb
@@ -1,21 +1,24 @@
 <style type="text/css">
-  .selectTitle {
+  .processTitle {
+      border: 1px solid #EAEAEA;
       margin-bottom:15px;
   }
-  .selectTitle h6{
-      background-color: #333333;
-    border-radius: 4px 4px 4px 4px;
-    color: #FFFFFF;
-    display: block;
-    padding: 5px 0;
-    text-align: center;
+  .page-block-button form{
+      margin: 0;
   }
 </style>
-<div class="selectTitle">
-   <h6>
-     <%= t(:label_icm_support_group) %> <%=select_tag_alias :group_id, available_group,@support_group.group_id,{:id=>"groupId",:href=>url_for({:group_id=>"{group_id}"})}%>
-   </h6>
+
+<div class="page-block processTitle">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_icm_support_group) %></h2>
+        <%=select_tag_alias :group_id, available_group,@support_group.group_id,{:id=>"groupId",:href=>url_for({:group_id=>"{group_id}"})}%>
+      </td>
+    </tr>
+  </table>
 </div>
+
 <% if @support_group.id %>
     <%= render "edit_form" %>
 <% else %>
